// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bar height 1`] = `
<div class="buri-slider">
  <div class="buri-slider__bar" style="width: 50%; height: 10px;">
    <div role="slider" tabindex="0" aria-valuemin="0" aria-valuenow="50" aria-valuemax="100" aria-orientation="horizontal" class="buri-slider__button-wrapper">
      <div class="buri-slider__button"></div>
    </div>
  </div>
</div>
`;

exports[`click bar 1`] = `
<div class="buri-slider buri-slider--disabled">
  <div class="buri-slider__bar" style="width: 50%; height: 2px;">
    <div role="slider" tabindex="-1" aria-valuemin="0" aria-valuenow="50" aria-valuemax="100" aria-orientation="horizontal" class="buri-slider__button-wrapper">
      <div class="buri-slider__button"></div>
    </div>
  </div>
</div>
`;

exports[`click bar 2`] = `
<div class="buri-slider">
  <div class="buri-slider__bar" style="width: 100%; height: 2px;">
    <div role="slider" tabindex="0" aria-valuemin="0" aria-valuenow="100" aria-valuemax="100" aria-orientation="horizontal" class="buri-slider__button-wrapper">
      <div class="buri-slider__button"></div>
    </div>
  </div>
</div>
`;

exports[`click vertical 1`] = `
<div class="buri-slider buri-slider--vertical">
  <div class="buri-slider__bar" style="height: 100%; width: 2px;">
    <div role="slider" tabindex="0" aria-valuemin="0" aria-valuenow="100" aria-valuemax="100" aria-orientation="vertical" class="buri-slider__button-wrapper">
      <div class="buri-slider__button"></div>
    </div>
  </div>
</div>
`;

exports[`drag button 1`] = `
<div class="buri-slider buri-slider--disabled">
  <div class="buri-slider__bar" style="width: 50%; height: 2px;">
    <div role="slider" tabindex="-1" aria-valuemin="0" aria-valuenow="50" aria-valuemax="100" aria-orientation="horizontal" class="buri-slider__button-wrapper">
      <div class="buri-slider__button"></div>
    </div>
  </div>
</div>
`;

exports[`drag button 2`] = `
<div class="buri-slider">
  <div class="buri-slider__bar" style="width: 100%; height: 2px;">
    <div role="slider" tabindex="0" aria-valuemin="0" aria-valuenow="100" aria-valuemax="100" aria-orientation="horizontal" class="buri-slider__button-wrapper">
      <div class="buri-slider__button"></div>
    </div>
  </div>
</div>
`;

exports[`drag button vertical 1`] = `
<div class="buri-slider buri-slider--vertical">
  <div class="buri-slider__bar" style="height: 100%; width: 2px;">
    <div role="slider" tabindex="0" aria-valuemin="0" aria-valuenow="100" aria-valuemax="100" aria-orientation="vertical" class="buri-slider__button-wrapper">
      <div class="buri-slider__button"></div>
    </div>
  </div>
</div>
`;
